fixed center alignment

--- a/src/appComponent.css
+++ b/src/appComponent.css
@@ -2,8 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    padding: 20px;
+    width: 100vw;
     color: white;
 }
 
